# fuzzfetch

./: .appveyor.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .taskcluster.yml  .travis.yml  README.md  __init__.py  fetch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml  taskcluster-pr.yml  taskcluster-push.yml  taskcluster-release.yml
fuzzfetch/: __main__.py  fetch.py  test_fetch.py
src/fuzzfetch/: __init__.py  __main__.py  args.py  core.py  download.py  errors.py  extract.py  fetch.py  models.py  path.py  shim.py  utils.py
tests/: conftest.py  test_args.py  test_core.py  test_download.py  test_extract.py  test_fetch.py  test_models.py  test_path.py  test_utils.py
tests/cassettes/test_core/: test_auto_name[autoland-firefox-autoland-20251107165513-opt].yaml  test_auto_name[beta-firefox-m-b-20251107021527-opt].yaml  test_auto_name[beta-thunderbird-c-b-20251103170853-opt].yaml  test_auto_name[central-firefox-m-c-20251107164336-opt].yaml  test_auto_name[central-thunderbird-c-c-20251106232556-opt].yaml  test_auto_name[esr140-firefox-m-esr140-20251106203603-opt].yaml  test_auto_name[esr140-thunderbird-c-esr140-20251107133303-opt].yaml  test_auto_name[release-firefox-m-r-20251106194447-opt].yaml  test_auto_name[release-thunderbird-c-r-20251106212021-opt].yaml  test_auto_name[try-firefox-try-20251107165543-opt].yaml  test_auto_name[try-thunderbird-try-c-c-20251107030132-opt].yaml  test_extract_build_linux.yaml  test_extract_build_macos.yaml
tests/cassettes/test_fetch/: test_fetcher_variants[asan-fuzzing-afl-firefox].yaml  test_fetcher_variants[asan-fuzzing-nyx-ccov-firefox].yaml  test_fetcher_variants[asan-fuzzing-nyx-firefox].yaml  test_fetcher_variants[debug-fuzzilli-js].yaml  test_fetcher_variants[debug-searchfox].yaml  test_fetcher_variants[flag_params0-targets0].yaml  test_fetcher_variants[flag_params1-targets1].yaml  test_fetcher_variants[flag_params2-targets2].yaml  test_fetcher_variants[flag_params3-targets3].yaml  test_fetcher_variants[flag_params4-targets4].yaml  test_metadata[False-central [Android-arm-debug]].yaml  test_metadata[False-central [Android-arm-opt]].yaml  test_metadata[False-central [Android-arm64-opt]].yaml  test_metadata[False-central [Android-x64-opt]].yaml  test_metadata[False-central [Darwin-arm64-fuzzing-asan-opt]].yaml  test_metadata[False-central [Darwin-arm64-fuzzing-debug]].yaml  test_metadata[False-central [Darwin-arm64-opt]].yaml  test_metadata[False-central [Darwin-x64-debug]].yaml  test_metadata[False-central [Darwin-x64-fuzzing-asan-opt]].yaml  test_metadata[False-central [Darwin-x64-fuzzing-debug]].yaml  test_metadata[False-central [Darwin-x64-opt]].yaml  test_metadata[False-central [Linux-arm64-opt]].yaml  test_metadata[False-central [Linux-x64-asan-opt]].yaml  test_metadata[False-central [Linux-x64-ccov-fuzzing-opt]].yaml  test_metadata[False-central [Linux-x64-ccov-opt]].yaml  test_metadata[False-central [Linux-x64-debug]].yaml  test_metadata[False-central [Linux-x64-fuzzing-asan-opt]].yaml  test_metadata[False-central [Linux-x64-fuzzing-debug]].yaml  test_metadata[False-central [Linux-x64-fuzzing-tsan-opt]].yaml  test_metadata[False-central [Linux-x64-opt]].yaml  test_metadata[False-central [Linux-x64-tsan-opt]].yaml  test_metadata[False-central [Linux-x86-debug]].yaml  test_metadata[False-central [Linux-x86-opt]].yaml  test_metadata[False-central [Windows-arm64-debug]].yaml  test_metadata[False-central [Windows-arm64-opt]].yaml  test_metadata[False-central [Windows-x64-asan-opt]].yaml  test_metadata[False-central [Windows-x64-ccov-fuzzing-opt]].yaml  test_metadata[False-central [Windows-x64-ccov-opt]].yaml  test_metadata[False-central [Windows-x64-debug]].yaml  test_metadata[False-central [Windows-x64-fuzzing-debug]].yaml  (+230 more)
tests/cassettes/test_models/: test_hgrevision_properties[autoland-9efa2d7e9e4c].yaml  test_hgrevision_properties[beta-64afe096714f].yaml  test_hgrevision_properties[central-2cb6128d7dca].yaml  test_hgrevision_properties[release-16fc978cb4f0].yaml  test_hgrevision_properties[try-001e4eea9c6d].yaml
tests/mock-hg/mozilla-central/json-rev/: 10aa74237898  24938c537a55  d1001fea6e4c
tests/mock-index/v1/namespaces/: gecko.v2.mozilla-beta.pushdate.2017.12.20  gecko.v2.mozilla-beta.pushdate.2018.05.07  gecko.v2.mozilla-central.pushdate.2017.12.20  gecko.v2.mozilla-central.pushdate.2018.05.07  gecko.v2.mozilla-central.pushdate.2018.09.05  gecko.v2.mozilla-central.pushdate.2019.08.22  gecko.v2.mozilla-central.pushdate.2019.10.15  gecko.v2.mozilla-esr52.pushdate.2017.12.19  gecko.v2.mozilla-esr52.pushdate.2017.12.20  gecko.v2.mozilla-esr52.pushdate.2018.05.05  gecko.v2.mozilla-esr52.pushdate.2018.05.07  gecko.v2.mozilla-esr60.pushdate.2018.06.26  gecko.v2.mozilla-esr60.pushdate.2019.10.07  gecko.v2.mozilla-esr60.pushdate.2019.10.14  gecko.v2.mozilla-esr68.pushdate.2019.08.13  gecko.v2.mozilla-esr68.pushdate.2019.10.07  gecko.v2.mozilla-esr68.pushdate.2019.10.09  gecko.v2.mozilla-esr68.pushdate.2019.10.15  gecko.v2.mozilla-inbound.pushdate.2017.12.20  gecko.v2.mozilla-inbound.pushdate.2018.05.07  gecko.v2.mozilla-inbound.pushdate.2018.09.05  gecko.v2.mozilla-inbound.pushdate.2019.03.28  gecko.v2.mozilla-inbound.pushdate.2019.08.22  gecko.v2.mozilla-inbound.pushdate.2019.10.15  gecko.v2.mozilla-release.pushdate.2017.07.29  gecko.v2.mozilla-release.pushdate.2017.08.26  gecko.v2.mozilla-release.pushdate.2017.12.18  gecko.v2.mozilla-release.pushdate.2018.05.06  gecko.v2.try.pushdate.2019.08.22  gecko.v2.try.pushdate.2019.10.15  gecko.v2.try.pushdate.2019.10.16
tests/mock-index/v1/task/: gecko.v2.mozilla-beta.latest.firefox.linux64-asan-debug  gecko.v2.mozilla-beta.latest.firefox.linux64-asan-opt  gecko.v2.mozilla-beta.latest.firefox.linux64-debug  gecko.v2.mozilla-beta.latest.firefox.linux64-fuzzing-asan-opt  gecko.v2.mozilla-beta.latest.firefox.linux64-opt  gecko.v2.mozilla-beta.latest.firefox.macosx64-debug  gecko.v2.mozilla-beta.latest.firefox.macosx64-opt  (+730 more)
tests/mock-product-details/1.0/: firefox_versions.json
(+2200 files in other folders)
