[metadata]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Software Development :: Testing
description = Downloader for firefox/jsshell builds.
description-file = README.md
keywords = fuzz fuzzing security test testing
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = fuzzfetch
platforms = any
url = https://github.com/MozillaSecurity/fuzzfetch

[options]
install_requires =
    pathlib2; python_version < '3.6'
    pytz
    requests
package_dir =
    = src
packages =
    fuzzfetch
zip_safe = False
python_requires = >=3.5

[options.entry_points]
console_scripts =
    fuzzfetch = fuzzfetch:Fetcher.main

[options.extras_require]
dev =
    pre-commit
    tox
