[metadata]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Testing
description = Downloader for firefox/jsshell builds.
keywords = fuzz fuzzing security test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = fuzzfetch
platforms = any
url = https://github.com/MozillaSecurity/fuzzfetch

[options]
install_requires =
    pytz
    requests
package_dir =
    = src
packages =
    fuzzfetch
zip_safe = False
python_requires = >=3.9

[options.entry_points]
console_scripts =
    fuzzfetch = fuzzfetch:Fetcher.main

[options.extras_require]
dev =
    pre-commit
    tox
sentry =
    sentry-fuzzing-config @ git+https://github.com/MozillaSecurity/sentry#egg=sentry-fuzzing-config

[options.package_data]
fuzzfetch =
    py.typed
